--- a/Ollama_+_Unsloth_+_Llama_3_+_CSV_finetuning.ipynb
+++ b/Ollama_+_Unsloth_+_Llama_3_+_CSV_finetuning.ipynb
@@ -45,7 +45,7 @@
         "# Installs Unsloth, Xformers (Flash Attention) and all other packages!\n",
         "!pip install \"unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git\"\n",
         "!pip install torch==2.3.1\n",
-         "!pip install --no-deps "xformers==0.0.27" "trl<0.9.0" peft accelerate bitsandbytes triton \n",
+         "!pip install --no-deps \"xformers==0.0.27\" \"trl<0.9.0\" peft accelerate bitsandbytes triton \n",
         "# after running this code, please ensure you restart your colab session",
         "#!pip install \"unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git\"\n",
         "#!pip install --no-deps \"xformers<0.0.27\" \"trl<0.9.0\" peft accelerate bitsandbytes"
